Add rviz and python script for visualization

--- a/config/tag_descriptions.yaml
+++ b/config/tag_descriptions.yaml
@@ -1,10 +1,14 @@
 tag_descriptions:
-  - id: 1
-    size: 0.1
-    family: 1
-  - id: 2
-    size: 0.2
-    family: 2
-  - id: 3
-    size: 0.15
+  - id: 130
+    size: 0.96
     family: 0
+  - id: 124
+    size: 0.3
+    family: 0
+  - id: 122
+    size: 0.2
+    family: 0
+
+  #   family: 0 - "tag36h11"
+  #           1 - "tag25h9"
+  #           2 - "tag16h5"
