--- a/config/tag_descriptions.yaml
+++ b/config/tag_descriptions.yaml
@@ -8,6 +8,9 @@ tag_descriptions:
   - id: 122
     size: 0.2
     family: 0
+  - id: 120
+    size: 0.1
+    family: 0
 
   #   family: 0 - "tag36h11"
   #           1 - "tag25h9"
